# dojo

./: Cargo.toml  justfile
parti-prod/: Cargo.toml  out.txt  parti-prod.hs  parti-prod.xopp  the-4-3-and-the-2s.xopp
parti-prod/src/: bigbrain.rs  main.rs  treestuff.rs
scramble/: Cargo.toml
scramble/src/: main.rs
ultimate-tic-tac-toe/: .gitignore  Cargo.toml  justfile
ultimate-tic-tac-toe/benches/: calc_winner.rs
ultimate-tic-tac-toe/examples/: empty_board_scores.rs  flamegraph_basic.rs  flamegraph_mcts.rs
ultimate-tic-tac-toe/src/: bitmagic.rs  board.rs  consts.rs  lib.rs  main.rs  rng.rs  tree.rs  types.rs  util.rs
ultimate-tic-tac-toe/src/board/: move_finder.rs  move_iter.rs  nested.rs  one_bit.rs
ultimate-tic-tac-toe/src/tree/: node_state.rs  simulation.rs
