[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]
#  should match codingame https://www.codingame.com/playgrounds/40701/help-center/languages-versions
itertools = "0.14"
rand = "0.9.2"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "calc_winner"
harness = false
